<resources>
    <string name="app_name">Flight Duty Tracker</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_flight">FlightActivity</string>

    <string name="flight_empty_view">No flights to display\nTap the + button to add one</string>
    <string name="title_activity_flight_details">FlightDetailsActivity</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->
    <string name="default_7days_duty">60</string>
    <string name="default_28days_duty">190</string>
    <string name="default_year_duty">1800</string>
    <string name="default_7days_flight">60</string>
    <string name="default_28days_flight">100</string>
    <string name="default_year_flight">1000</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_edit_flight">EditFlightActivity</string>
</resources>
